# ClNet

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/io/github/wzzju/clnet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: clnet.cl  matvec.cl
app/src/main/cpp/: clLog.cpp  cl_log.cpp  clnet.cpp  cnpy.cpp  net.cpp  run_neon.cpp  spmv.cpp  utilities.cpp  utility_cpu.cpp  utility_gpu.cpp
app/src/main/cpp/include/: clLog.h  cl_log.h  clnet.h  cnpy.h  helper.h  net.h  spmv.h  utilities.h  utility_cpu.h  utility_gpu.h
app/src/main/cpp/include/layers/: conv_layer.h  fc_layer.h  layer.h  pooling_layer.h  relu_layer.h  softmax_layer.h
app/src/main/cpp/include/opencl/: cl_log.h  cl_objects.h
app/src/main/cpp/layers/: conv_layer.cpp  fc_layer.cpp  pooling_layer.cpp  relu_layer.cpp  softmax_layer.cpp
app/src/main/cpp/opencl/: cl_log.cpp  cl_objects.cpp
app/src/main/java/io/github/wzzju/clnet/: CheckPermission.java  MainActivity.java  Probability.java  TopK.java  Utility.java
app/src/main/res/drawable/: btn_selector.xml  shape_bg.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml
app/src/test/java/io/github/wzzju/clnet/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
